# mosaic

./: 1ubq.cif  README.md  download_params.sh  example_notebook.py  finetune.py  pyproject.toml
examples/: boltz_notebook.py  energy.py  example_notebook.py  finetune.py  protenij.py
src/boltz_binder_design/: __init__.py  common.py  losses.py  notebook_utils.py  optimizers.py
src/boltz_binder_design/af2/: alphafold2.py  confidence_metrics.py  featurization.py
src/boltz_binder_design/alphafold/common/: mmcif_metadata.py  protein.py
src/boltz_binder_design/alphafold/data/: feature_processing.py  mmcif_parsing.py  msa_pairing.py  pipeline.py
src/boltz_binder_design/alphafold/model/: all_atom.py  all_atom_multimer.py  data.py  folding.py  folding_multimer.py  modules.py  modules_multimer.py
src/boltz_binder_design/alphafold/model/geometry/: rigid_matrix_vector.py  rotation_matrix.py  vector.py
src/boltz_binder_design/alphafold/model/tf/: data_transforms.py
src/boltz_binder_design/esm/: __init__.py  esm.py  mha.py  pretrained.py  tokenizer.py
src/boltz_binder_design/esm2quinox/: __init__.py  _esm2.py
src/boltz_binder_design/loss/: esm.py  stability.py  trigram.py
src/boltz_binder_design/losses/: ablang.py  af2.py  boltz.py  boltz2.py  esm.py  esmc.py  esmq.py  fixed_positions.py  protein_mpnn.py  protenix.py  stability.py  structure_prediction.py  transformations.py  trigram.py
src/boltz_binder_design/proteinmpnn/: mpnn.py  torch_mpnn.py
src/boltz_binder_design/stability_model/: train.py
src/mosaic/: common.py  optimizers.py  util.py
src/mosaic/af2/: confidence_metrics.py
src/mosaic/alphafold/data/: pipeline_multimer.py  templates.py
src/mosaic/alphafold/model/: config.py  folding.py  mapping.py  modules.py  r3.py
src/mosaic/alphafold/model/geometry/: vector.py
src/mosaic/losses/: af2.py  boltz.py  boltz2.py  esm.py  esmc.py  protein_mpnn.py  protenix.py  structure_prediction.py
