[project]
name = "boltz-binder-design"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nick Boyd", email = "nick@escalante.bio" }
]
requires-python = ">=3.10"
dependencies = [
    "dm-haiku>=0.0.13",
    "esm2quinox==0.1.0",
    "fair-esm==2.0.0",
    "flax>=0.10.2",
    "gemmi>=0.7.0",
    "ipymolstar>=0.0.9",
    "jax>=0.5.1",
    "joltz",
    "marimo>=0.10.9",
    "matplotlib>=3.10.0",
    "ml-collections>=1.0.0",
    "optax>=0.2.4",
]

[project.scripts]
boltz-binder-design = "boltz-binder-design:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = [
    "src/boltz_binder_design/proteinmpnn/weights/*",
]

[tool.uv.sources]
joltz = { git = "https://github.com/nboyd/joltz" }

[tool.uv]
override-dependencies = ["scipy==1.15.1"]
