[project]
name = "boltz-binder-design"
version = "0.1.0"
description = "multi-objective protein design"
readme = "README.md"
authors = [
    { name = "Nick Boyd", email = "nick@escalante.bio" }
]
requires-python = ">=3.10"
dependencies = [
    "dm-haiku>=0.0.13",
    "esm2quinox==0.1.0",
    "fair-esm==2.0.0",
    "flax>=0.10.2",
    "gemmi>=0.6.5",
    "ipymolstar>=0.0.9",
    "jax>=0.5.1",
    "joltz",
    "marimo>=0.10.9",
    "matplotlib>=3.10.0",
    "ml-collections>=1.0.0",
    "optax>=0.2.4",
    "esmj",
    "scipy==1.15.1",
    "ablang>=0.3.1",
    "jablang",
    "torchvision==v0.22.0"
]

[dependency-groups]
jax-cpu = [
  "jax[cpu]",
]
jax-cuda = [
  "jax[cuda]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = [
    "src/boltz_binder_design/proteinmpnn/weights/*",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

esmj = { git = "https://github.com/escalante-bio/esmj" }
jablang = { git = "https://github.com/escalante-bio/jablang" }
joltz = { git = "https://github.com/nboyd/joltz" }

[tool.uv]
conflicts = [
    [
      { group = "jax-cpu" },
      { group = "jax-cuda" },
    ],
]
package = true
override-dependencies = ["scipy==1.15.1"]

